--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <classgraph.version>4.8.172</classgraph.version>
         <lombok.version>1.18.36</lombok.version>
         <junit.version>5.10.3</junit.version>
+        <slf4j.version>2.0.17</slf4j.version>
+        <logback.version>1.5.27</logback.version>
     </properties>
 
     <dependencyManagement>
@@ -30,6 +32,17 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>io.github.classgraph</groupId>
             <artifactId>classgraph</artifactId>
